# SukiSU-Ultra

./: 0001-icon.patch  README.md  android12-5.10_kernelsu.ko  android13-5.10_kernelsu.ko  android13-5.15_kernelsu.ko  android14-5.15_kernelsu.ko  android14-6.1_kernelsu.ko  android15-6.6_kernelsu.ko  backport.patch  crowdin.yml  wrangler.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: avd-kernel.yml  build-kernel-avd.yml  build-lkm-local.yml  build-lkm.yml  build-manager-manual.yml  build-manager.yml  crowdin.yml  deploy-website.yml  gki-kernel-local.yml  gki-kernel-mock.yml  gki-kernel.yml  kpmmgr.yml  ksud.yml  ksud_magic.yml  ksud_overlayfs.yml  shellcheck.yml  susfs.yml  susfsd.yml  zakomksd.yml
Website/: .gitignore  .prettierignore  .prettierrc.json  README.md  package.json  pnpm-workspace.yaml  tsconfig.json
Website/docs/: config.ts
Website/scripts/: sw.ts  sync-favicons.ts
docs/: README-en.md  README-ja.md  README-tr.md  README.md
docs/.vitepress/: config.ts
docs/guide/: how-to-integrate.md  (+2 more)
favicon/: site.webmanifest
kernel/: Kconfig  Makefile  allowlist.c  apk_sign.c  apk_sign.h  arch.h  core_hook.c  core_hook.h  dynamic_manager.c  dynamic_manager.h  dynamic_sign.c  dynamic_sign.h  kernel_compat.c  kernel_compat.h  ksu.c  ksu.h  ksu_trace.c  ksu_trace.h  ksu_trace_export.c  ksud.c  ksud.h  manager.h  manager_sign.h  setup.sh  sucompat.c  throne_tracker.c  throne_tracker.h
manager/: build.gradle.kts  gradle.properties
manager/app/src/main/cpp/: CMakeLists.txt  jni.c  jni.cc  ksu.c  ksu.cc  ksu.h  prelude.h
scripts/: ksubot.py
(+348 files in other folders)
